...
                return "5m"
            case .last10Minutes:
                return "10m"
            case .last30Minutes:
                return "30m"
            case .last60Minutes:
                return "60m"
            case .allRetained:
                return "All"
            }
        }

        var timeRange: ConsoleDock.SupportReportTimeRange {
...
